--- a/models/ronin.html
+++ b/models/ronin.html
@@ -1,160 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>TVS Ronin – Price, Specs & Features | Tirumala TVS</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="TVS Ronin – Modern-retro motorcycle with strong performance, premium design and advanced features. Check price and specs at Tirumala TVS." />
-  <link rel="stylesheet" href="../css/style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TVS Ronin - Unscripted</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
+<body style="padding-bottom: 80px;">
 
-<body>
+    <header>
+        <div class="nav-container">
+            <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
+            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Contact Us</a></li></ul></nav>
+        </div>
+    </header>
 
-<!-- HEADER -->
-<header style="border-bottom:1px solid #e5e7eb;">
-  <div style="max-width:1200px;margin:auto;padding:16px;display:flex;justify-content:space-between;align-items:center;">
-    <h2 style="margin:0;">Tirumala TVS</h2>
-    <nav>
-      <a href="../index.html" style="margin-right:16px;">Home</a>
-      <a href="../models.html" style="margin-right:16px;">Models</a>
-      <a href="../contacts.html">Contact</a>
-    </nav>
-  </div>
-</header>
+    <div class="product-hero">
+        <h2>TVS Ronin</h2>
+        <p>Modern-Retro Scrambler | #Unscripted</p>
+    </div>
 
-<!-- HERO -->
-<section style="background:#0b4fd8;color:#fff;">
-  <div style="max-width:1200px;margin:auto;padding:60px 16px;">
-    <h1 style="font-size:42px;margin-bottom:10px;">TVS Ronin</h1>
-    <p style="font-size:18px;opacity:0.95;">
-      Modern-retro motorcycle built for city rides and weekend adventures
-    </p>
-  </div>
-</section>
+    <section style="text-align: center; padding-bottom: 40px;">
+        <img src="../assets/ronin.jpg" alt="TVS Ronin" style="max-width: 80%; border-radius: 10px; box-shadow: 0 10px 40px rgba(0,0,0,0.1); margin-top: -50px; background: #fff;">
+        <div style="max-width: 800px; margin: 40px auto 0;">
+            <h3 class="section-title">Live the Unscripted Life</h3>
+            <p style="color: #666; font-size: 1.1rem;">
+                A motorcycle that defies categorization. With a 225cc engine, dual-channel ABS, and urban scrambler looks, the Ronin is built for the city and the open road.
+            </p>
+        </div>
+    </section>
 
-<!-- CONTENT -->
-<main style="max-width:1200px;margin:auto;padding:50px 16px;">
+    <section class="features-section" style="background-color: #f9f9f9;">
+        <h3 class="section-title">Key Features</h3>
+        <div class="features-grid">
+            <div class="feature-card"><span class="feature-icon">☔</span><h4>Rain & Urban Mode</h4><p>Switchable ABS modes for different riding conditions.</p></div>
+            <div class="feature-card"><span class="feature-icon">🏍</span><h4>GTT Technology</h4><p>Glide Through Traffic capability for effortless city riding.</p></div>
+            <div class="feature-card"><span class="feature-icon">💡</span><h4>T-Face Pilot Lamp</h4><p>Signature T-shaped LED DRL for a unique look.</p></div>
+            <div class="feature-card"><span class="feature-icon">🔗</span><h4>SmartXonnect</h4><p>Voice assist, turn-by-turn navigation, and call alerts.</p></div>
+        </div>
+    </section>
 
-  <!-- OVERVIEW -->
-  <section style="margin-bottom:60px;">
-    <h2 style="color:#0b4fd8;font-size:30px;margin-bottom:14px;">
-      Overview
-    </h2>
+    <section class="specs-section">
+        <h3 class="section-title">Technical Specifications</h3>
+        <div class="spec-container">
+            <div class="spec-row"><div class="spec-label">Engine</div><div class="spec-value">225.9 cc, Oil Cooled</div></div>
+            <div class="spec-row"><div class="spec-label">Power</div><div class="spec-value">20.4 PS @ 7750 rpm</div></div>
+            <div class="spec-row"><div class="spec-label">Torque</div><div class="spec-value">19.93 Nm @ 3750 rpm</div></div>
+            <div class="spec-row"><div class="spec-label">Front Suspension</div><div class="spec-value">41mm USD Forks (Gold)</div></div>
+            <div class="spec-row"><div class="spec-label">Brakes</div><div class="spec-value">Dual Channel ABS (Disc/Disc)</div></div>
+        </div>
+    </section>
 
-    <p style="margin-bottom:18px;">
-      TVS Ronin is a unique modern-retro motorcycle that blends classic design
-      elements with contemporary technology. Designed for riders who enjoy
-      relaxed city cruising as well as occasional highway rides, Ronin offers
-      a smooth engine, comfortable ergonomics and premium road presence.
-    </p>
-  </section>
-
-  <!-- KEY HIGHLIGHTS -->
-  <section style="margin-bottom:60px;">
-    <h2 style="color:#0b4fd8;font-size:30px;margin-bottom:14px;">
-      Key Highlights
-    </h2>
-
-    <ul style="margin-bottom:18px;">
-      <li>225.9 cc engine with smooth power delivery</li>
-      <li>Modern-retro styling with premium finish</li>
-      <li>Comfortable upright riding position</li>
-      <li>Advanced safety features including ABS</li>
-      <li>Ideal for city rides and touring</li>
-    </ul>
-  </section>
-
-  <!-- ENGINE -->
-  <section style="margin-bottom:60px;">
-    <h2 style="color:#0b4fd8;font-size:30px;margin-bottom:14px;">
-      Engine & Performance
-    </h2>
-
-    <table style="width:100%;border-collapse:collapse;margin-bottom:18px;">
-      <tr><td><strong>Engine</strong></td><td>225.9 cc, oil-cooled</td></tr>
-      <tr><td><strong>Power</strong></td><td>Approx. 20.4 PS</td></tr>
-      <tr><td><strong>Torque</strong></td><td>Approx. 19.9 Nm</td></tr>
-      <tr><td><strong>Transmission</strong></td><td>5-speed manual with slipper clutch</td></tr>
-    </table>
-  </section>
-
-  <!-- VARIANTS -->
-  <section style="margin-bottom:60px;">
-    <h2 style="color:#0b4fd8;font-size:30px;margin-bottom:14px;">
-      Variants Available
-    </h2>
-
-    <ul style="margin-bottom:18px;">
-      <li>TVS Ronin Base</li>
-      <li>TVS Ronin Mid</li>
-      <li>TVS Ronin Top</li>
-    </ul>
-  </section>
-
-  <!-- COLOURS -->
-  <section style="margin-bottom:60px;">
-    <h2 style="color:#0b4fd8;font-size:30px;margin-bottom:14px;">
-      Colour Options
-    </h2>
-
-    <ul style="margin-bottom:18px;">
-      <li>Magenta</li>
-      <li>Grey</li>
-      <li>Silver</li>
-      <li>Black</li>
-    </ul>
-  </section>
-
-  <!-- PRICE -->
-  <section style="margin-bottom:60px;">
-    <h2 style="color:#0b4fd8;font-size:30px;margin-bottom:14px;">
-      Price (Indicative)
-    </h2>
-
-    <p>
-      Ex-showroom price in Bengaluru starts from  
-      <strong>₹1.49 lakh (approx.)</strong>
-    </p>
-    <p style="font-size:14px;color:#555;">
-      *Prices may vary based on variant and offers
-    </p>
-  </section>
-
-  <!-- WHY BUY -->
-  <section style="margin-bottom:60px;">
-    <h2 style="color:#0b4fd8;font-size:30px;margin-bottom:14px;">
-      Why Choose TVS Ronin?
-    </h2>
-
-    <p>
-      TVS Ronin is perfect for riders looking for a motorcycle that offers a
-      relaxed riding experience with modern performance and premium styling.
-      Its versatility, comfort and strong engine make it a great choice for
-      both daily commuting and weekend leisure rides.
-    </p>
-  </section>
-
-  <!-- CTA -->
-  <section style="padding:35px;background:#f5f7fb;border-radius:12px;">
-    <h3 style="margin-bottom:10px;">Interested in TVS Ronin?</h3>
-    <p style="margin-bottom:16px;">
-      Visit Tirumala TVS, Bidarahalli or contact us for best offers and test ride.
-    </p>
-    <a href="../contacts.html"
-       style="display:inline-block;padding:12px 26px;background:#0b4fd8;color:#fff;border-radius:6px;text-decoration:none;">
-      Enquire Now
-    </a>
-  </section>
-
-</main>
-
-<!-- FOOTER -->
-<footer style="border-top:1px solid #e5e7eb;margin-top:50px;">
-  <div style="max-width:1200px;margin:auto;padding:20px 16px;text-align:center;">
-    © 2026 Tirumala TVS. All rights reserved.
-  </div>
-</footer>
+    <div class="sticky-cta">
+        <a href="../contacts.html" class="action-btn" style="width: 100%; max-width: 300px; text-align: center;">📅 Book Test Ride</a>
+        <a href="https://wa.me/919964946512?text=Interested in TVS Ronin" class="action-btn" style="background: #25D366; color: white; width: 100%; max-width: 300px; text-align: center;">💬 WhatsApp Us</a>
+    </div>
 
 </body>
 </html>
-
