--- a/models/ntorq125.html
+++ b/models/ntorq125.html
@@ -1,140 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>TVS Ntorq 125 – Price, Specs & Features | Tirumala TVS</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="TVS Ntorq 125 – Sporty performance scooter with aggressive styling and smart features. Check price, specs, variants and features at Tirumala TVS." />
-  <link rel="stylesheet" href="../css/style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TVS Ntorq 125 - Play Smart</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
+<body style="padding-bottom: 80px;">
 
-<body>
+    <header>
+        <div class="nav-container">
+            <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
+            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Contact Us</a></li></ul></nav>
+        </div>
+    </header>
 
-<!-- HEADER -->
-<header style="border-bottom:1px solid #e5e7eb;">
-  <div style="max-width:1200px;margin:auto;padding:16px;display:flex;justify-content:space-between;align-items:center;">
-    <h2 style="margin:0;">Tirumala TVS</h2>
-    <nav>
-      <a href="../index.html" style="margin-right:16px;">Home</a>
-      <a href="../models.html" style="margin-right:16px;">Models</a>
-      <a href="../contacts.html">Contact</a>
-    </nav>
-  </div>
-</header>
+    <div class="product-hero">
+        <h2>TVS Ntorq 125</h2>
+        <p>India's First Bluetooth Connected Scooter</p>
+    </div>
 
-<!-- HERO -->
-<section style="background:#0b4fd8;color:#fff;">
-  <div style="max-width:1200px;margin:auto;padding:60px 16px;">
-    <h1 style="font-size:42px;margin-bottom:10px;">TVS Ntorq 125</h1>
-    <p style="font-size:18px;opacity:0.95;">
-      Race-inspired performance scooter with smart connectivity
-    </p>
-  </div>
-</section>
+    <section style="text-align: center; padding-bottom: 40px;">
+        <img src="../assets/ntorq.jpg" alt="TVS Ntorq" onerror="this.src='https://placehold.co/800x600?text=TVS+Ntorq'" style="max-width: 80%; border-radius: 10px; box-shadow: 0 10px 40px rgba(0,0,0,0.1); margin-top: -50px; background: #fff;">
+        <div style="max-width: 800px; margin: 40px auto 0;">
+            <h3 class="section-title">Racing DNA Unleashed</h3>
+            <p style="color: #666; font-size: 1.1rem;">
+                A scooter that performs like a bike. With 3-valve technology and stealth aircraft-inspired design, the Ntorq 125 is built for the gen-Z rider.
+            </p>
+        </div>
+    </section>
 
-<!-- CONTENT -->
-<main style="max-width:1200px;margin:auto;padding:40px 16px;">
+    <section class="features-section" style="background-color: #f9f9f9;">
+        <h3 class="section-title">Key Features</h3>
+        <div class="features-grid">
+            <div class="feature-card"><span class="feature-icon">🎮</span><h4>Gaming Console</h4><p>Speedometer with lap timer, top speed recorder, and more.</p></div>
+            <div class="feature-card"><span class="feature-icon">💨</span><h4>3-Valve Engine</h4><p>Superior pickup and power with race-tuned engine.</p></div>
+            <div class="feature-card"><span class="feature-icon">🔊</span><h4>Sporty Exhaust</h4><p>Signature exhaust note that sounds like a sportbike.</p></div>
+            <div class="feature-card"><span class="feature-icon">🛑</span><h4>Engine Kill Switch</h4><p>First in segment engine kill switch for convenience.</p></div>
+        </div>
+    </section>
 
-  <!-- OVERVIEW -->
-  <section style="margin-bottom:40px;">
-    <h2>Overview</h2>
-    <p>
-      TVS Ntorq 125 is a sporty, performance-focused scooter designed for young riders
-      who want aggressive styling, quick acceleration and advanced features.
-      Inspired by racing DNA, Ntorq 125 delivers thrilling performance while remaining
-      practical for everyday city commuting.
-    </p>
-  </section>
+    <section class="specs-section">
+        <h3 class="section-title">Technical Specifications</h3>
+        <div class="spec-container">
+            <div class="spec-row"><div class="spec-label">Engine</div><div class="spec-value">124.8 cc, 3 Valve, CVTi-REVV</div></div>
+            <div class="spec-row"><div class="spec-label">Max Power</div><div class="spec-value">9.38 PS @ 7000 rpm</div></div>
+            <div class="spec-row"><div class="spec-label">Top Speed</div><div class="spec-value">95 km/h</div></div>
+            <div class="spec-row"><div class="spec-label">Fuel Tank</div><div class="spec-value">5.8 Liters (External Fill)</div></div>
+            <div class="spec-row"><div class="spec-label">Tyres</div><div class="spec-value">Tubeless, 12 inch Diamond Cut Alloy</div></div>
+        </div>
+    </section>
 
-  <!-- KEY HIGHLIGHTS -->
-  <section style="margin-bottom:40px;">
-    <h2>Key Highlights</h2>
-    <ul>
-      <li>Class-leading performance in the 125 cc segment</li>
-      <li>Aggressive, race-inspired design</li>
-      <li>SmartXonnect Bluetooth connectivity features</li>
-      <li>Excellent handling and braking</li>
-      <li>Sporty exhaust note</li>
-    </ul>
-  </section>
-
-  <!-- ENGINE -->
-  <section style="margin-bottom:40px;">
-    <h2>Engine & Performance</h2>
-    <table style="width:100%;border-collapse:collapse;">
-      <tr><td><strong>Engine</strong></td><td>124.8 cc, air-cooled</td></tr>
-      <tr><td><strong>Power</strong></td><td>Approx. 9.4 PS</td></tr>
-      <tr><td><strong>Torque</strong></td><td>Approx. 10.5 Nm</td></tr>
-      <tr><td><strong>Transmission</strong></td><td>Automatic (CVT)</td></tr>
-      <tr><td><strong>Ride Focus</strong></td><td>Sporty city riding & quick acceleration</td></tr>
-    </table>
-  </section>
-
-  <!-- VARIANTS -->
-  <section style="margin-bottom:40px;">
-    <h2>Variants Available</h2>
-    <ul>
-      <li>TVS Ntorq 125 Drum</li>
-      <li>TVS Ntorq 125 Disc</li>
-      <li>TVS Ntorq 125 Race Edition</li>
-      <li>TVS Ntorq 125 Super Squad Edition</li>
-    </ul>
-  </section>
-
-  <!-- COLOURS -->
-  <section style="margin-bottom:40px;">
-    <h2>Colour Options</h2>
-    <ul>
-      <li>Red</li>
-      <li>Blue</li>
-      <li>Yellow</li>
-      <li>Black</li>
-      <li>Grey</li>
-    </ul>
-  </section>
-
-  <!-- PRICE -->
-  <section style="margin-bottom:40px;">
-    <h2>Price (Indicative)</h2>
-    <p>
-      Ex-showroom price in Bengaluru starts from  
-      <strong>₹87,000 (approx.)</strong>
-    </p>
-    <p style="font-size:14px;color:#555;">
-      *Prices may vary based on variant, offers and location
-    </p>
-  </section>
-
-  <!-- WHY BUY -->
-  <section style="margin-bottom:40px;">
-    <h2>Why Choose TVS Ntorq 125?</h2>
-    <p>
-      TVS Ntorq 125 is the perfect scooter for riders who want sporty performance,
-      bold styling and modern technology in one package. Its strong acceleration,
-      smart connectivity features and race-inspired character make it one of the
-      most exciting scooters in India even in 2026.
-    </p>
-  </section>
-
-  <!-- CTA -->
-  <section style="padding:30px;background:#f5f7fb;border-radius:12px;">
-    <h3>Interested in TVS Ntorq 125?</h3>
-    <p>Visit Tirumala TVS, Bidarahalli or contact us for best offers and test ride.</p>
-    <a href="../contacts.html"
-       style="display:inline-block;margin-top:10px;padding:12px 24px;background:#0b4fd8;color:#fff;border-radius:6px;text-decoration:none;">
-      Enquire Now
-    </a>
-  </section>
-
-</main>
-
-<!-- FOOTER -->
-<footer style="border-top:1px solid #e5e7eb;margin-top:40px;">
-  <div style="max-width:1200px;margin:auto;padding:20px 16px;text-align:center;">
-    © 2026 Tirumala TVS. All rights reserved.
-  </div>
-</footer>
+    <div class="sticky-cta">
+        <a href="../contacts.html" class="action-btn" style="width: 100%; max-width: 300px; text-align: center;">📅 Book Test Ride</a>
+        <a href="https://wa.me/919964946512?text=Interested in Ntorq" class="action-btn" style="background: #25D366; color: white; width: 100%; max-width: 300px; text-align: center;">💬 WhatsApp Us</a>
+    </div>
 
 </body>
 </html>
-
