--- a/models/apache160.html
+++ b/models/apache160.html
@@ -1,144 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>TVS Apache Series – 160 | 200 | RR 310 | Tirumala TVS</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="TVS Apache RTR 160, RTR 200 4V and RR 310 – Performance motorcycles with racing DNA. Explore specs and prices at Tirumala TVS." />
-  <link rel="stylesheet" href="../css/style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TVS Apache RTR 160 4V</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
+<body style="padding-bottom: 80px;">
 
-<body>
+    <header>
+        <div class="nav-container">
+            <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
+            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Contact Us</a></li></ul></nav>
+        </div>
+    </header>
 
-<!-- HEADER -->
-<header style="border-bottom:1px solid #e5e7eb;">
-  <div style="max-width:1200px;margin:auto;padding:16px;display:flex;justify-content:space-between;align-items:center;">
-    <h2 style="margin:0;">Tirumala TVS</h2>
-    <nav>
-      <a href="../index.html" style="margin-right:16px;">Home</a>
-      <a href="../models.html" style="margin-right:16px;">Models</a>
-      <a href="../contacts.html">Contact</a>
-    </nav>
-  </div>
-</header>
+    <div class="product-hero">
+        <h2>Apache RTR 160 4V</h2>
+        <p>The Unstoppable | Racing DNA</p>
+    </div>
 
-<!-- HERO -->
-<section style="background:#0b4fd8;color:#fff;">
-  <div style="max-width:1200px;margin:auto;padding:60px 16px;">
-    <h1 style="font-size:42px;margin-bottom:10px;">TVS Apache Series</h1>
-    <p style="font-size:18px;opacity:0.95;">
-      Race-bred performance motorcycles with legendary Apache DNA
-    </p>
-  </div>
-</section>
+    <section style="text-align: center; padding-bottom: 40px;">
+        <img src="../assets/apache160.jpg" alt="Apache 160" onerror="this.src='https://placehold.co/800x600?text=Apache+160'" style="max-width: 80%; border-radius: 10px; box-shadow: 0 10px 40px rgba(0,0,0,0.1); margin-top: -50px; background: #fff;">
+        
+        <div style="max-width: 800px; margin: 40px auto 0;">
+            <h3 class="section-title">Track to Road</h3>
+            <p style="color: #666; font-size: 1.1rem;">
+                The most powerful 160cc bike in its class. Born from the racetrack, it features Ride Modes, GTT, and SmartXonnect technology.
+            </p>
+        </div>
+    </section>
 
-<!-- CONTENT -->
-<main style="max-width:1200px;margin:auto;padding:50px 16px;">
+    <section class="features-section" style="background-color: #f9f9f9;">
+        <h3 class="section-title">Key Features</h3>
+        <div class="features-grid">
+            <div class="feature-card"><span class="feature-icon">🏎</span><h4>3 Ride Modes</h4><p>Sport, Urban, and Rain modes to adapt to any condition.</p></div>
+            <div class="feature-card"><span class="feature-icon">💡</span><h4>LED Headlamp</h4><p>Aggressive styling with new LED Daytime Running Lights.</p></div>
+            <div class="feature-card"><span class="feature-icon">📱</span><h4>SmartXonnect</h4><p>Race telemetry, lean angle mode, and crash alert.</p></div>
+            <div class="feature-card"><span class="feature-icon">🍩</span><h4>Super Moto ABS</h4><p>Single Channel Super Moto ABS for ultimate braking control.</p></div>
+        </div>
+    </section>
 
-  <!-- ================= APACHE 160 ================= -->
-  <section style="margin-bottom:70px;">
-    <h2 style="color:#0b4fd8;font-size:30px;margin-bottom:14px;">
-      TVS Apache RTR 160
-    </h2>
+    <section class="specs-section">
+        <h3 class="section-title">Technical Specifications</h3>
+        <div class="spec-container">
+            <div class="spec-row"><div class="spec-label">Engine</div><div class="spec-value">159.7 cc, Oil Cooled, 4 Valve</div></div>
+            <div class="spec-row"><div class="spec-label">Power (Sport)</div><div class="spec-value">17.55 PS @ 9250 rpm</div></div>
+            <div class="spec-row"><div class="spec-label">Torque</div><div class="spec-value">14.73 Nm @ 7250 rpm</div></div>
+            <div class="spec-row"><div class="spec-label">Weight</div><div class="spec-value">144 kg</div></div>
+            <div class="spec-row"><div class="spec-label">Fuel Tank</div><div class="spec-value">12 Liters</div></div>
+        </div>
+    </section>
 
-    <p style="margin-bottom:18px;">
-      TVS Apache RTR 160 is a race-bred performance motorcycle known for sharp handling,
-      responsive acceleration and lightweight construction. It is ideal for riders
-      who want sporty performance with everyday usability.
-    </p>
-
-    <ul style="margin-bottom:18px;">
-      <li>159.7 cc race-tuned engine</li>
-      <li>Agile handling and precise control</li>
-      <li>Sporty Apache design language</li>
-      <li>Excellent braking stability</li>
-    </ul>
-
-    <table style="width:100%;border-collapse:collapse;margin-bottom:18px;">
-      <tr><td><strong>Engine</strong></td><td>159.7 cc, air-cooled</td></tr>
-      <tr><td><strong>Power</strong></td><td>Approx. 15.5 PS</td></tr>
-      <tr><td><strong>Transmission</strong></td><td>5-speed manual</td></tr>
-    </table>
-
-    <p><strong>Price:</strong> ₹1.20 lakh (approx. ex-showroom)</p>
-  </section>
-
-  <!-- ================= APACHE 200 ================= -->
-  <section style="margin-bottom:70px;">
-    <h2 style="color:#0b4fd8;font-size:30px;margin-bottom:14px;">
-      TVS Apache RTR 200 4V
-    </h2>
-
-    <p style="margin-bottom:18px;">
-      Apache RTR 200 4V takes performance to the next level with advanced electronics,
-      ride modes and a powerful oil-cooled engine. It is built for riders who want
-      track-inspired performance on city roads.
-    </p>
-
-    <ul style="margin-bottom:18px;">
-      <li>197.75 cc 4-valve oil-cooled engine</li>
-      <li>Urban, Sport and Rain ride modes</li>
-      <li>Dual-channel ABS</li>
-      <li>Race-tuned suspension</li>
-    </ul>
-
-    <table style="width:100%;border-collapse:collapse;margin-bottom:18px;">
-      <tr><td><strong>Engine</strong></td><td>197.75 cc, oil-cooled</td></tr>
-      <tr><td><strong>Power</strong></td><td>Approx. 20.8 PS</td></tr>
-      <tr><td><strong>Transmission</strong></td><td>5-speed manual</td></tr>
-    </table>
-
-    <p><strong>Price:</strong> ₹1.45 lakh (approx. ex-showroom)</p>
-  </section>
-
-  <!-- ================= APACHE RR 310 ================= -->
-  <section style="margin-bottom:70px;">
-    <h2 style="color:#0b4fd8;font-size:30px;margin-bottom:14px;">
-      TVS Apache RR 310
-    </h2>
-
-    <p style="margin-bottom:18px;">
-      TVS Apache RR 310 is a fully-faired premium sports motorcycle engineered for
-      high-speed stability, track performance and advanced electronics. It represents
-      the pinnacle of Apache racing technology.
-    </p>
-
-    <ul style="margin-bottom:18px;">
-      <li>312.2 cc liquid-cooled performance engine</li>
-      <li>Bi-directional quick shifter</li>
-      <li>Multiple riding modes & traction control</li>
-      <li>Aerodynamic race-inspired fairing</li>
-    </ul>
-
-    <table style="width:100%;border-collapse:collapse;margin-bottom:18px;">
-      <tr><td><strong>Engine</strong></td><td>312.2 cc, liquid-cooled</td></tr>
-      <tr><td><strong>Power</strong></td><td>Approx. 34 PS</td></tr>
-      <tr><td><strong>Transmission</strong></td><td>6-speed manual</td></tr>
-    </table>
-
-    <p><strong>Price:</strong> ₹2.72 lakh (approx. ex-showroom)</p>
-  </section>
-
-  <!-- CTA -->
-  <section style="padding:35px;background:#f5f7fb;border-radius:12px;">
-    <h3 style="margin-bottom:10px;">Interested in TVS Apache Motorcycles?</h3>
-    <p style="margin-bottom:16px;">
-      Visit Tirumala TVS, Bidarahalli or contact us for best offers and test rides.
-    </p>
-    <a href="../contacts.html"
-       style="display:inline-block;padding:12px 26px;background:#0b4fd8;color:#fff;border-radius:6px;text-decoration:none;">
-      Enquire Now
-    </a>
-  </section>
-
-</main>
-
-<!-- FOOTER -->
-<footer style="border-top:1px solid #e5e7eb;margin-top:50px;">
-  <div style="max-width:1200px;margin:auto;padding:20px 16px;text-align:center;">
-    © 2026 Tirumala TVS. All rights reserved.
-  </div>
-</footer>
+    <div class="sticky-cta">
+        <a href="../contacts.html" class="action-btn" style="width: 100%; max-width: 300px; text-align: center;">📅 Book Test Ride</a>
+        <a href="https://wa.me/919964946512?text=Interested in Apache" class="action-btn" style="background: #25D366; color: white; width: 100%; max-width: 300px; text-align: center;">💬 WhatsApp Us</a>
+    </div>
 
 </body>
 </html>
