--- a/models/xl100.html
+++ b/models/xl100.html
@@ -3,59 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TVS XL100 - Tirumala TVS</title>
+    <title>TVS XL100 Heavy Duty</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
-<body>
+<body style="padding-bottom: 80px;">
 
     <header>
         <div class="nav-container">
-            <a href="../index.html" class="logo">
-                <h1>Tirumala <span>TVS</span></h1>
-            </a>
-            <ul class="nav-links">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../models.html">All Models</a></li>
-                <li><a href="../contacts.html">Contact Us</a></li>
-            </ul>
+            <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
+            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Contact Us</a></li></ul></nav>
         </div>
     </header>
 
-    <div class="hero" style="height: 40vh; background: var(--tvs-blue);">
-        <h2>TVS XL100 Heavy Duty</h2>
-        <p>The Multi-Utility King of the Road</p>
+    <div class="product-hero">
+        <h2>TVS XL100</h2>
+        <p>Heavy Duty | The Multi-Utility King</p>
     </div>
 
-    <div style="max-width: 1000px; margin: 40px auto; padding: 20px; display: flex; flex-wrap: wrap; gap: 40px;">
-        
-        <div style="flex: 1; min-width: 300px;">
-            <img src="https://placehold.co/600x400?text=TVS+XL100" alt="TVS Bike" style="width: 100%; border-radius: 10px;">
+    <section style="text-align: center; padding-bottom: 40px;">
+        <img src="../assets/xl100.jpg" alt="TVS XL100" onerror="this.src='https://placehold.co/800x600?text=TVS+XL100'" style="max-width: 80%; border-radius: 10px; box-shadow: 0 10px 40px rgba(0,0,0,0.1); margin-top: -50px; background: #fff;">
+        <div style="max-width: 800px; margin: 40px auto 0;">
+            <h3 class="section-title">Built to Last</h3>
+            <p style="color: #666; font-size: 1.1rem;">
+                The most reliable business partner. With i-Touch Start and 15% more mileage, the XL100 is built for heavy loads and rough roads.
+            </p>
         </div>
+    </section>
 
-        <div style="flex: 1; min-width: 300px;">
-            <h3 style="color: var(--tvs-red); margin-bottom: 20px;">Key Specifications</h3>
-            
-            <ul style="list-style: none; line-height: 2.5;">
-                <li><strong>Engine:</strong> 99.7 cc</li>
-                <li><strong>Power:</strong> 4.4 PS @ 6000 rpm</li>
-                <li><strong>Weight:</strong> 89 kg</li>
-                <li><strong>Fuel Tank:</strong> 4 Liters</li>
-                <li><strong>Starting:</strong> Kick & Self Start</li>
-            </ul>
-
-            <div style="margin-top: 30px;">
-                <h4 style="margin-bottom: 10px;">Interested in this bike?</h4>
-                <a href="../contacts.html" class="btn-book">Book Test Ride</a>
-                <a href="https://wa.me/919964946512?text=I am interested in TVS XL100" class="btn-outline" style="margin-left: 10px;">WhatsApp Us</a>
-            </div>
+    <section class="features-section" style="background-color: #f9f9f9;">
+        <h3 class="section-title">Key Features</h3>
+        <div class="features-grid">
+            <div class="feature-card"><span class="feature-icon">👆</span><h4>i-Touch Start</h4><p>Silent and instant start button.</p></div>
+            <div class="feature-card"><span class="feature-icon">💪</span><h4>Heavy Duty</h4><p>Payload capacity of 130 kg.</p></div>
+            <div class="feature-card"><span class="feature-icon">🧼</span><h4>Easy Clean</h4><p>Detachable rear seat for carrying goods.</p></div>
+            <div class="feature-card"><span class="feature-icon">🔌</span><h4>Mobile Charging</h4><p>Charge your phone while you work.</p></div>
         </div>
+    </section>
+
+    <section class="specs-section">
+        <h3 class="section-title">Technical Specifications</h3>
+        <div class="spec-container">
+            <div class="spec-row"><div class="spec-label">Engine</div><div class="spec-value">99.7 cc, 4 Stroke</div></div>
+            <div class="spec-row"><div class="spec-label">Power</div><div class="spec-value">4.4 PS @ 6000 rpm</div></div>
+            <div class="spec-row"><div class="spec-label">Torque</div><div class="spec-value">6.5 Nm @ 3500 rpm</div></div>
+            <div class="spec-row"><div class="spec-label">Weight</div><div class="spec-value">89 kg</div></div>
+            <div class="spec-row"><div class="spec-label">Starting</div><div class="spec-value">Kick & Self Start</div></div>
+        </div>
+    </section>
+
+    <div class="sticky-cta">
+        <a href="../contacts.html" class="action-btn" style="width: 100%; max-width: 300px; text-align: center;">📅 Book Test Ride</a>
+        <a href="https://wa.me/919964946512?text=Interested in XL100" class="action-btn" style="background: #25D366; color: white; width: 100%; max-width: 300px; text-align: center;">💬 WhatsApp Us</a>
     </div>
-
-    <footer>
-        <div class="footer-bottom">
-            <p>&copy; 2024 Tirumala TVS Bidarahalli.</p>
-        </div>
-    </footer>
 
 </body>
 </html>
