--- a/models/zest110.html
+++ b/models/zest110.html
@@ -1,135 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>TVS Zest 110 – Price, Specs & Features | Tirumala TVS</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="TVS Zest 110 – Lightweight scooter with excellent mileage, comfort and reliability. Check price, specifications, variants and features at Tirumala TVS." />
-  <link rel="stylesheet" href="../css/style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TVS Zest 110 - Scooty</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
+<body style="padding-bottom: 80px;">
 
-<body>
+    <header>
+        <div class="nav-container">
+            <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
+            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Contact Us</a></li></ul></nav>
+        </div>
+    </header>
 
-<!-- HEADER -->
-<header style="border-bottom:1px solid #e5e7eb;">
-  <div style="max-width:1200px;margin:auto;padding:16px;display:flex;justify-content:space-between;align-items:center;">
-    <h2 style="margin:0;">Tirumala TVS</h2>
-    <nav>
-      <a href="../index.html" style="margin-right:16px;">Home</a>
-      <a href="../models.html" style="margin-right:16px;">Models</a>
-      <a href="../contacts.html">Contact</a>
-    </nav>
-  </div>
-</header>
+    <div class="product-hero">
+        <h2>TVS Zest 110</h2>
+        <p>Power of 110cc | Easy to Ride</p>
+    </div>
 
-<!-- HERO -->
-<section style="background:#0b4fd8;color:#fff;">
-  <div style="max-width:1200px;margin:auto;padding:60px 16px;">
-    <h1 style="font-size:42px;margin-bottom:10px;">TVS Zest 110</h1>
-    <p style="font-size:18px;opacity:0.95;">
-      Lightweight, stylish scooter built for effortless city riding
-    </p>
-  </div>
-</section>
+    <section style="text-align: center; padding-bottom: 40px;">
+        <img src="../assets/zest.jpg" alt="TVS Zest" onerror="this.src='https://placehold.co/800x600?text=TVS+Zest+110'" style="max-width: 80%; border-radius: 10px; box-shadow: 0 10px 40px rgba(0,0,0,0.1); margin-top: -50px; background: #fff;">
+        <div style="max-width: 800px; margin: 40px auto 0;">
+            <h3 class="section-title">Compact & Powerful</h3>
+            <p style="color: #666; font-size: 1.1rem;">
+                The perfect blend of style and substance. Lightweight, easy to handle, and packed with a peppy 110cc engine for zipping through city traffic.
+            </p>
+        </div>
+    </section>
 
-<!-- CONTENT -->
-<main style="max-width:1200px;margin:auto;padding:40px 16px;">
+    <section class="features-section" style="background-color: #f9f9f9;">
+        <h3 class="section-title">Key Features</h3>
+        <div class="features-grid">
+            <div class="feature-card"><span class="feature-icon">💡</span><h4>LED DRL</h4><p>Premium LED Daytime Running Lights for style and safety.</p></div>
+            <div class="feature-card"><span class="feature-icon">🎒</span><h4>19L Storage</h4><p>Ample under-seat storage for your helmet and bags.</p></div>
+            <div class="feature-card"><span class="feature-icon">🔌</span><h4>USB Charger</h4><p>Front glove box with smartphone charging.</p></div>
+            <div class="feature-card"><span class="feature-icon">⚖️</span><h4>Lightweight</h4><p>Best-in-class power-to-weight ratio for easy handling.</p></div>
+        </div>
+    </section>
 
-  <!-- OVERVIEW -->
-  <section style="margin-bottom:40px;">
-    <h2>Overview</h2>
-    <p>
-      TVS Zest 110 is designed for riders who want a lightweight, easy-to-handle
-      scooter with modern styling and excellent fuel efficiency.
-      Popular among daily commuters and women riders, Zest 110 offers
-      smooth performance, low seat height and hassle-free ownership.
-    </p>
-  </section>
+    <section class="specs-section">
+        <h3 class="section-title">Technical Specifications</h3>
+        <div class="spec-container">
+            <div class="spec-row"><div class="spec-label">Engine</div><div class="spec-value">109.7 cc, ET-Fi</div></div>
+            <div class="spec-row"><div class="spec-label">Power</div><div class="spec-value">7.8 PS @ 7500 rpm</div></div>
+            <div class="spec-row"><div class="spec-label">Torque</div><div class="spec-value">8.8 Nm @ 5500 rpm</div></div>
+            <div class="spec-row"><div class="spec-label">Weight</div><div class="spec-value">103 kg</div></div>
+            <div class="spec-row"><div class="spec-label">Fuel Tank</div><div class="spec-value">5 Liters</div></div>
+        </div>
+    </section>
 
-  <!-- KEY HIGHLIGHTS -->
-  <section style="margin-bottom:40px;">
-    <h2>Key Highlights</h2>
-    <ul>
-      <li>Extremely lightweight and easy to handle</li>
-      <li>Comfortable suspension tuned for city roads</li>
-      <li>Excellent mileage and low maintenance</li>
-      <li>Compact design with premium styling</li>
-      <li>Trusted TVS engine reliability</li>
-    </ul>
-  </section>
-
-  <!-- ENGINE -->
-  <section style="margin-bottom:40px;">
-    <h2>Engine & Performance</h2>
-    <table style="width:100%;border-collapse:collapse;">
-      <tr><td><strong>Engine</strong></td><td>109.7 cc, air-cooled</td></tr>
-      <tr><td><strong>Power</strong></td><td>Approx. 7.7 PS</td></tr>
-      <tr><td><strong>Torque</strong></td><td>Approx. 8.8 Nm</td></tr>
-      <tr><td><strong>Transmission</strong></td><td>Automatic (CVT)</td></tr>
-      <tr><td><strong>Ride Focus</strong></td><td>Smooth & refined for daily commuting</td></tr>
-    </table>
-  </section>
-
-  <!-- VARIANTS -->
-  <section style="margin-bottom:40px;">
-    <h2>Variants Available</h2>
-    <ul>
-      <li>TVS Zest 110 Standard</li>
-    </ul>
-  </section>
-
-  <!-- COLOURS -->
-  <section style="margin-bottom:40px;">
-    <h2>Colour Options</h2>
-    <ul>
-      <li>Red</li>
-      <li>Blue</li>
-      <li>White</li>
-      <li>Black</li>
-    </ul>
-  </section>
-
-  <!-- PRICE -->
-  <section style="margin-bottom:40px;">
-    <h2>Price (Indicative)</h2>
-    <p>
-      Ex-showroom price in Bengaluru starts from  
-      <strong>₹75,000 (approx.)</strong>
-    </p>
-    <p style="font-size:14px;color:#555;">
-      *Prices may vary based on variant, offers and location
-    </p>
-  </section>
-
-  <!-- WHY BUY -->
-  <section style="margin-bottom:40px;">
-    <h2>Why Choose TVS Zest 110?</h2>
-    <p>
-      TVS Zest 110 is ideal for city riders looking for a lightweight scooter
-      with dependable performance, easy maneuverability and affordable ownership.
-      It remains a strong choice in the entry-level scooter segment even in 2026.
-    </p>
-  </section>
-
-  <!-- CTA -->
-  <section style="padding:30px;background:#f5f7fb;border-radius:12px;">
-    <h3>Interested in TVS Zest 110?</h3>
-    <p>Visit Tirumala TVS, Bidarahalli or contact us for best offers.</p>
-    <a href="../contacts.html"
-       style="display:inline-block;margin-top:10px;padding:12px 24px;background:#0b4fd8;color:#fff;border-radius:6px;text-decoration:none;">
-      Enquire Now
-    </a>
-  </section>
-
-</main>
-
-<!-- FOOTER -->
-<footer style="border-top:1px solid #e5e7eb;margin-top:40px;">
-  <div style="max-width:1200px;margin:auto;padding:20px 16px;text-align:center;">
-    © 2026 Tirumala TVS. All rights reserved.
-  </div>
-</footer>
+    <div class="sticky-cta">
+        <a href="../contacts.html" class="action-btn" style="width: 100%; max-width: 300px; text-align: center;">📅 Book Test Ride</a>
+        <a href="https://wa.me/919964946512?text=Interested in Zest" class="action-btn" style="background: #25D366; color: white; width: 100%; max-width: 300px; text-align: center;">💬 WhatsApp Us</a>
+    </div>
 
 </body>
 </html>
-
