--- a/models/jupiter113.html
+++ b/models/jupiter113.html
@@ -1,137 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>TVS Jupiter 113 – Price, Specs & Features | Tirumala TVS</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="TVS Jupiter 113 – Comfortable family scooter with refined engine and excellent mileage. Check price, specifications, variants and features at Tirumala TVS." />
-  <link rel="stylesheet" href="../css/style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>New TVS Jupiter 110</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
+<body style="padding-bottom: 80px;">
 
-<body>
+    <header>
+        <div class="nav-container">
+            <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
+            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Contact Us</a></li></ul></nav>
+        </div>
+    </header>
 
-<!-- HEADER -->
-<header style="border-bottom:1px solid #e5e7eb;">
-  <div style="max-width:1200px;margin:auto;padding:16px;display:flex;justify-content:space-between;align-items:center;">
-    <h2 style="margin:0;">Tirumala TVS</h2>
-    <nav>
-      <a href="../index.html" style="margin-right:16px;">Home</a>
-      <a href="../models.html" style="margin-right:16px;">Models</a>
-      <a href="../contacts.html">Contact</a>
-    </nav>
-  </div>
-</header>
+    <div class="product-hero">
+        <h2>New TVS Jupiter 110</h2>
+        <p>Zyada Se Bhi Zyada | With iGO Assist</p>
+    </div>
 
-<!-- HERO -->
-<section style="background:#0b4fd8;color:#fff;">
-  <div style="max-width:1200px;margin:auto;padding:60px 16px;">
-    <h1 style="font-size:42px;margin-bottom:10px;">TVS Jupiter 113</h1>
-    <p style="font-size:18px;opacity:0.95;">
-      India’s most loved family scooter for comfort and reliability
-    </p>
-  </div>
-</section>
+    <section style="text-align: center; padding-bottom: 40px;">
+        <img src="../assets/jupiter110.jpg" alt="Jupiter 110" onerror="this.src='https://placehold.co/800x600?text=New+Jupiter+110'" style="max-width: 80%; border-radius: 10px; box-shadow: 0 10px 40px rgba(0,0,0,0.1); margin-top: -50px; background: #fff;">
+        <div style="max-width: 800px; margin: 40px auto 0;">
+            <h3 class="section-title">The New Benchmark</h3>
+            <p style="color: #666; font-size: 1.1rem;">
+                India's most loved scooter just got better. Now with a 113cc engine and <strong>iGO Assist Technology</strong> for instant power boost and higher mileage.
+            </p>
+        </div>
+    </section>
 
-<!-- CONTENT -->
-<main style="max-width:1200px;margin:auto;padding:40px 16px;">
+    <section class="features-section" style="background-color: #f9f9f9;">
+        <h3 class="section-title">Key Features</h3>
+        <div class="features-grid">
+            <div class="feature-card"><span class="feature-icon">⚡</span><h4>iGO Assist</h4><p>Micro-hybrid technology for torque boost and better mileage.</p></div>
+            <div class="feature-card"><span class="feature-icon">⛽</span><h4>Front Fuel Fill</h4><p>Refuel without getting off the seat.</p></div>
+            <div class="feature-card"><span class="feature-icon">📱</span><h4>SmartXonnect</h4><p>Bluetooth connectivity with turn-by-turn navigation.</p></div>
+            <div class="feature-card"><span class="feature-icon">🎒</span><h4>Big Storage</h4><p>Space for two helmets under the seat.</p></div>
+        </div>
+    </section>
 
-  <!-- OVERVIEW -->
-  <section style="margin-bottom:40px;">
-    <h2>Overview</h2>
-    <p>
-      TVS Jupiter 113 is one of India’s most popular scooters, known for its
-      comfortable ride quality, refined engine and family-friendly features.
-      Designed for everyday commuting, Jupiter offers excellent mileage,
-      smooth suspension and a stress-free riding experience.
-    </p>
-  </section>
+    <section class="specs-section">
+        <h3 class="section-title">Technical Specifications</h3>
+        <div class="spec-container">
+            <div class="spec-row"><div class="spec-label">Engine</div><div class="spec-value">113.3 cc, Single Cylinder</div></div>
+            <div class="spec-row"><div class="spec-label">Power</div><div class="spec-value">5.9 kW @ 6500 rpm</div></div>
+            <div class="spec-row"><div class="spec-label">Torque</div><div class="spec-value">9.8 Nm (with Assist)</div></div>
+            <div class="spec-row"><div class="spec-label">Weight</div><div class="spec-value">105 kg</div></div>
+            <div class="spec-row"><div class="spec-label">Brakes</div><div class="spec-value">Front Disc (Optional), SBT</div></div>
+        </div>
+    </section>
 
-  <!-- KEY HIGHLIGHTS -->
-  <section style="margin-bottom:40px;">
-    <h2>Key Highlights</h2>
-    <ul>
-      <li>Extremely comfortable suspension setup</li>
-      <li>Refined and reliable 113 cc engine</li>
-      <li>Excellent mileage for daily commuting</li>
-      <li>External fuel filling convenience</li>
-      <li>Large under-seat storage</li>
-    </ul>
-  </section>
-
-  <!-- ENGINE -->
-  <section style="margin-bottom:40px;">
-    <h2>Engine & Performance</h2>
-    <table style="width:100%;border-collapse:collapse;">
-      <tr><td><strong>Engine</strong></td><td>113.3 cc, air-cooled</td></tr>
-      <tr><td><strong>Power</strong></td><td>Approx. 8 PS</td></tr>
-      <tr><td><strong>Torque</strong></td><td>Approx. 9.2 Nm</td></tr>
-      <tr><td><strong>Transmission</strong></td><td>Automatic (CVT)</td></tr>
-      <tr><td><strong>Ride Focus</strong></td><td>Comfort-oriented daily commuting</td></tr>
-    </table>
-  </section>
-
-  <!-- VARIANTS -->
-  <section style="margin-bottom:40px;">
-    <h2>Variants Available</h2>
-    <ul>
-      <li>TVS Jupiter Drum</li>
-      <li>TVS Jupiter Drum Alloy</li>
-      <li>TVS Jupiter Disc</li>
-    </ul>
-  </section>
-
-  <!-- COLOURS -->
-  <section style="margin-bottom:40px;">
-    <h2>Colour Options</h2>
-    <ul>
-      <li>White</li>
-      <li>Grey</li>
-      <li>Blue</li>
-      <li>Brown</li>
-    </ul>
-  </section>
-
-  <!-- PRICE -->
-  <section style="margin-bottom:40px;">
-    <h2>Price (Indicative)</h2>
-    <p>
-      Ex-showroom price in Bengaluru starts from  
-      <strong>₹73,000 (approx.)</strong>
-    </p>
-    <p style="font-size:14px;color:#555;">
-      *Prices may vary based on variant, offers and location
-    </p>
-  </section>
-
-  <!-- WHY BUY -->
-  <section style="margin-bottom:40px;">
-    <h2>Why Choose TVS Jupiter 113?</h2>
-    <p>
-      TVS Jupiter 113 is ideal for families and daily commuters who prioritize
-      comfort, smooth performance and long-term reliability. Its proven engine,
-      comfortable seating and low running costs make it a top choice in the
-      110–125 cc scooter segment even in 2026.
-    </p>
-  </section>
-
-  <!-- CTA -->
-  <section style="padding:30px;background:#f5f7fb;border-radius:12px;">
-    <h3>Interested in TVS Jupiter 113?</h3>
-    <p>Visit Tirumala TVS, Bidarahalli or contact us for best offers and test ride.</p>
-    <a href="../contacts.html"
-       style="display:inline-block;margin-top:10px;padding:12px 24px;background:#0b4fd8;color:#fff;border-radius:6px;text-decoration:none;">
-      Enquire Now
-    </a>
-  </section>
-
-</main>
-
-<!-- FOOTER -->
-<footer style="border-top:1px solid #e5e7eb;margin-top:40px;">
-  <div style="max-width:1200px;margin:auto;padding:20px 16px;text-align:center;">
-    © 2026 Tirumala TVS. All rights reserved.
-  </div>
-</footer>
+    <div class="sticky-cta">
+        <a href="../contacts.html" class="action-btn" style="width: 100%; max-width: 300px; text-align: center;">📅 Book Test Ride</a>
+        <a href="https://wa.me/919964946512?text=Interested in Jupiter 110" class="action-btn" style="background: #25D366; color: white; width: 100%; max-width: 300px; text-align: center;">💬 WhatsApp Us</a>
+    </div>
 
 </body>
 </html>
