--- a/models/jupiter125.html
+++ b/models/jupiter125.html
@@ -1,137 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>TVS Jupiter 125 – Price, Specs & Features | Tirumala TVS</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="TVS Jupiter 125 – Premium family scooter with powerful engine, class-leading boot space and refined ride. Check price, specs, variants and features at Tirumala TVS." />
-  <link rel="stylesheet" href="../css/style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TVS Jupiter 125</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
+<body style="padding-bottom: 80px;">
 
-<body>
+    <header>
+        <div class="nav-container">
+            <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
+            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Contact Us</a></li></ul></nav>
+        </div>
+    </header>
 
-<!-- HEADER -->
-<header style="border-bottom:1px solid #e5e7eb;">
-  <div style="max-width:1200px;margin:auto;padding:16px;display:flex;justify-content:space-between;align-items:center;">
-    <h2 style="margin:0;">Tirumala TVS</h2>
-    <nav>
-      <a href="../index.html" style="margin-right:16px;">Home</a>
-      <a href="../models.html" style="margin-right:16px;">Models</a>
-      <a href="../contacts.html">Contact</a>
-    </nav>
-  </div>
-</header>
+    <div class="product-hero">
+        <h2>TVS Jupiter 125</h2>
+        <p>Zyada Se Bhi Zyada | 125cc Power</p>
+    </div>
 
-<!-- HERO -->
-<section style="background:#0b4fd8;color:#fff;">
-  <div style="max-width:1200px;margin:auto;padding:60px 16px;">
-    <h1 style="font-size:42px;margin-bottom:10px;">TVS Jupiter 125</h1>
-    <p style="font-size:18px;opacity:0.95;">
-      Premium family scooter with power, comfort and class-leading storage
-    </p>
-  </div>
-</section>
+    <section style="text-align: center; padding-bottom: 40px;">
+        <img src="../assets/jupiter125.jpg" alt="Jupiter 125" onerror="this.src='https://placehold.co/800x600?text=TVS+Jupiter+125'" style="max-width: 80%; border-radius: 10px; box-shadow: 0 10px 40px rgba(0,0,0,0.1); margin-top: -50px; background: #fff;">
+        <div style="max-width: 800px; margin: 40px auto 0;">
+            <h3 class="section-title">Grandness in Every Ride</h3>
+            <p style="color: #666; font-size: 1.1rem;">
+                A perfect upgrade. The Jupiter 125 offers the largest under-seat storage in the segment (fits 2 full-face helmets), superior mileage, and a progressive neo-masculine styling.
+            </p>
+        </div>
+    </section>
 
-<!-- CONTENT -->
-<main style="max-width:1200px;margin:auto;padding:40px 16px;">
+    <section class="features-section" style="background-color: #f9f9f9;">
+        <h3 class="section-title">Key Features</h3>
+        <div class="features-grid">
+            <div class="feature-card"><span class="feature-icon">🪖</span><h4>2 Helmet Storage</h4><p>Largest 33L under-seat storage in the industry.</p></div>
+            <div class="feature-card"><span class="feature-icon">⛽</span><h4>Front Fuel Fill</h4><p>Fuel tank moved to floorboard for better balance.</p></div>
+            <div class="feature-card"><span class="feature-icon">🛋</span><h4>Longest Seat</h4><p>Longest seat in segment for maximum comfort.</p></div>
+            <div class="feature-card"><span class="feature-icon">🛑</span><h4>Metal Body</h4><p>Robust metal build for durability and safety.</p></div>
+        </div>
+    </section>
 
-  <!-- OVERVIEW -->
-  <section style="margin-bottom:40px;">
-    <h2>Overview</h2>
-    <p>
-      TVS Jupiter 125 is a premium scooter designed for customers who want more power,
-      superior comfort and advanced practicality. With a larger engine, smooth ride
-      quality and one of the biggest under-seat storage capacities in its segment,
-      Jupiter 125 sets a new benchmark for family scooters.
-    </p>
-  </section>
+    <section class="specs-section">
+        <h3 class="section-title">Technical Specifications</h3>
+        <div class="spec-container">
+            <div class="spec-row"><div class="spec-label">Engine</div><div class="spec-value">124.8 cc, 3 Valve</div></div>
+            <div class="spec-row"><div class="spec-label">Power</div><div class="spec-value">6.0 kW @ 6500 rpm</div></div>
+            <div class="spec-row"><div class="spec-label">Torque</div><div class="spec-value">10.5 Nm @ 4500 rpm</div></div>
+            <div class="spec-row"><div class="spec-label">Fuel Tank</div><div class="spec-value">5.1 Liters</div></div>
+            <div class="spec-row"><div class="spec-label">Suspension</div><div class="spec-value">3-Step Adjustable Gas Charged Rear</div></div>
+        </div>
+    </section>
 
-  <!-- KEY HIGHLIGHTS -->
-  <section style="margin-bottom:40px;">
-    <h2>Key Highlights</h2>
-    <ul>
-      <li>Powerful 125 cc engine with smooth performance</li>
-      <li>Class-leading under-seat storage</li>
-      <li>External fuel filling for convenience</li>
-      <li>Premium fit and finish</li>
-      <li>Comfort-focused suspension and seating</li>
-    </ul>
-  </section>
-
-  <!-- ENGINE -->
-  <section style="margin-bottom:40px;">
-    <h2>Engine & Performance</h2>
-    <table style="width:100%;border-collapse:collapse;">
-      <tr><td><strong>Engine</strong></td><td>124.8 cc, air-cooled</td></tr>
-      <tr><td><strong>Power</strong></td><td>Approx. 8.3 PS</td></tr>
-      <tr><td><strong>Torque</strong></td><td>Approx. 10.5 Nm</td></tr>
-      <tr><td><strong>Transmission</strong></td><td>Automatic (CVT)</td></tr>
-      <tr><td><strong>Ride Focus</strong></td><td>Comfortable city & family commuting</td></tr>
-    </table>
-  </section>
-
-  <!-- VARIANTS -->
-  <section style="margin-bottom:40px;">
-    <h2>Variants Available</h2>
-    <ul>
-      <li>TVS Jupiter 125 Drum</li>
-      <li>TVS Jupiter 125 Disc</li>
-    </ul>
-  </section>
-
-  <!-- COLOURS -->
-  <section style="margin-bottom:40px;">
-    <h2>Colour Options</h2>
-    <ul>
-      <li>White</li>
-      <li>Grey</li>
-      <li>Blue</li>
-      <li>Red</li>
-      <li>Brown</li>
-    </ul>
-  </section>
-
-  <!-- PRICE -->
-  <section style="margin-bottom:40px;">
-    <h2>Price (Indicative)</h2>
-    <p>
-      Ex-showroom price in Bengaluru starts from  
-      <strong>₹86,000 (approx.)</strong>
-    </p>
-    <p style="font-size:14px;color:#555;">
-      *Prices may vary based on variant, offers and location
-    </p>
-  </section>
-
-  <!-- WHY BUY -->
-  <section style="margin-bottom:40px;">
-    <h2>Why Choose TVS Jupiter 125?</h2>
-    <p>
-      TVS Jupiter 125 is perfect for customers looking for a refined, premium scooter
-      with strong performance and unmatched practicality. Its spacious boot, smooth
-      engine and comfortable ride make it an excellent upgrade from 110 cc scooters
-      and a top choice in the 125 cc segment in 2026.
-    </p>
-  </section>
-
-  <!-- CTA -->
-  <section style="padding:30px;background:#f5f7fb;border-radius:12px;">
-    <h3>Interested in TVS Jupiter 125?</h3>
-    <p>Visit Tirumala TVS, Bidarahalli or contact us for best offers and test ride.</p>
-    <a href="../contacts.html"
-       style="display:inline-block;margin-top:10px;padding:12px 24px;background:#0b4fd8;color:#fff;border-radius:6px;text-decoration:none;">
-      Enquire Now
-    </a>
-  </section>
-
-</main>
-
-<!-- FOOTER -->
-<footer style="border-top:1px solid #e5e7eb;margin-top:40px;">
-  <div style="max-width:1200px;margin:auto;padding:20px 16px;text-align:center;">
-    © 2026 Tirumala TVS. All rights reserved.
-  </div>
-</footer>
+    <div class="sticky-cta">
+        <a href="../contacts.html" class="action-btn" style="width: 100%; max-width: 300px; text-align: center;">📅 Book Test Ride</a>
+        <a href="https://wa.me/919964946512?text=Interested in Jupiter 125" class="action-btn" style="background: #25D366; color: white; width: 100%; max-width: 300px; text-align: center;">💬 WhatsApp Us</a>
+    </div>
 
 </body>
 </html>
